# ipykernel-logging

./: .gitignore  pyproject.toml
ipykernel_logging/: main.py
