[tool.poetry]
name = "ipykernel-logging"
version = "0.1.0"
description = ""
authors = ["Dave Shoup <dave.shoup@gmail.com>"]
readme = "README.md"
packages = [{ include = "ipykernel_logging" }]

[tool.poetry.dependencies]
python = "^3.9"
structlog = "^22.1.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.12.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
