[tool.poetry]
name = "ipykernel-logging"
version = "0.1.0"
description = ""
authors = ["Dave Shoup <dave.shoup@gmail.com>"]
readme = "README.md"
packages = [{ include = "ipykernel_logging" }]

[tool.poetry.dependencies]
python = "^3.8"
structlog = "^23.2.0"

[tool.poetry.group.dev.dependencies]
black = ">=22.12,<24.0"
flake8 = "^5.0.4"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
